# factorization-rs

./: Cargo.toml  LICENSE  README.md  brain_storming.md  index.html
.github/workflows/: rust.yml
resources/shaders/: fragment_shader_3d.frag  fragment_shader_color.frag  shader.wgsl  vertex_shader.vert  vertex_shader_3d.vert  vertex_shader_color.vert  vertex_shader_texture.vert  vertex_shader_unused.vert
src/: camera.rs  colors.rs  glsl_reader.rs  image_loader.rs  info_types.rs  lib.rs  logger.rs  main.rs  random.rs  shader.wgsl  shader_challenge.wgsl  shader_reader.rs  shapes.rs  state.rs  texture.rs  util.rs
src/resources/shader/: fragment_shader.frag
src/resources/shaders/: fragment_shader.frag  vertex_shader.vert
testing/: Cargo.toml
testing/src/: main.rs
