[package]
name = "factorization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
chrono = "*"
env_logger = "*"
image = {version = "*", default-features = false, features = ["png"]}
log = "*"
pollster = "*"
wgpu = "*"
winit = "*"
